app1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: {
    "datou": "pod1"
  }
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: datou
            operator: In
            values:
            - node1     
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
