app2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx2
  labels: {
    "datou": "pod2"
  }
spec:
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: datou
            operator: In
            values:
            - node2    
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
